successfull connection to test_ubuntu

--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -1,6 +1,7 @@
 FROM ubuntu:18.04
 
 RUN apt-get update && apt-get install -y openssh-server
+#RUN apt-get install xinetd telnetd
 RUN mkdir /var/run/sshd
 RUN echo 'root:password' | chpasswd
 RUN sed -i 's/PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
@@ -10,5 +11,10 @@ RUN useradd -ms /bin/bash testuser
 RUN echo 'testuser:testpassword' | chpasswd
 RUN mkdir /home/testuser/tests
 WORKDIR /home/testuser/tests
+
+RUN touch empty_test_file.txt
+RUN touch not_empty_test_file.txt
+RUN echo "test text from not empty file" >> not_empty_test_file.txt
+RUN chmod -R 777 ./
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
